--- a/YetiWeb/index.html
+++ b/YetiWeb/index.html
@@ -7,7 +7,7 @@
     <title>YetiEats</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="background-color:#F8F8F8;"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script src="/YetiWeb/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   </body>
