--- a/YetiWeb/index.html
+++ b/YetiWeb/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image" href="/YetiWeb/public/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
     <title>YetiEats</title>
   </head>
   <body>
     <div id="root" style="background-color:#F8F8F8;"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script src="/YetiWeb/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   </body>
 </html>
