add category completed

--- a/YetiWeb/index.html
+++ b/YetiWeb/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image" href="/YetiWeb/public/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>YetiEats</title>
   </head>
   <body>
